[tool.poetry]
name = "ForwardShell"
version = "0.3.1"
description = "Exploits a simple WebRCE and supports PTY upgrade, Bind- and ReveseShells, File Up- and Download"
authors = ["Alexander Sturz <alex@sturz.org>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
