[tool.poetry]
name = "ForwardShell"
version = "0.4.3"
description = "Exploits a simple Web application RCE on Linux systems and builds a semiautomatic shell. It supports a PTY upgrade, Bind- and ReverseShells with different flavours, File Up- and Download and resume orphaned sessions."
authors = ["Alexander Sturz <alex@sturz.org>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
